# Fourth-Level-Embedded

.dependencygraph/: setting.json
labs/guide4-mocks/mocks/: circBufT_mock.h
tests/: CMakeLists.txt  test_accelerometer.c  test_adc.c  test_adc_hal.c  test_average.c  test_circular_buffer.c  test_displayInterface.c  test_stepCounter.c  test_stopwatch.c  test_temp_measure.c  test_timer_s.c  test_unitConverter.c
tests/mocks/: OrbitOLED_mock.h  accelerometer_mock.h  accl_hal_tiva_mock.h  adc_hal_tiva_mock.h  average_mock.h  circBufT_mock.h  core_mock.h  step_counter_main_mock.h  timer_s_mock.h
